--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   
       </div>
       <form action="#">
-        <label for="name">CARDHOLDER NAME<input type="text" name="name" id="name" placeholder="e.g. Jane Appleseed" required><p id="🤧"></p></label>
-        <label for="number">CARD NUMBER<input type="text" name="number" id="number" placeholder="e.g. 1234 5678 9123 0000" required><p id="error"></p></label>
+        <label for="name">CARDHOLDER NAME<input type="text" name="name" id="name" maxlength="26" placeholder="e.g. Jane Appleseed" required><p id="🤧"></p></label>
+        <label for="number">CARD NUMBER<input type="text" name="number" maxlength="16" id="number" placeholder="e.g. 1234 5678 9123 0000" required><p id="error"></p></label>
         <div class="dates">
           <label for="mm">EXP. DATE (MM/YY) <br>
-            <input type="text" class="year mm" id="💣" placeholder="MM" required>
-            <input type="text" class="year yy" id="💣" placeholder="YY" required><p id="❤"></p></label><br>
+            <input type="text" class="year mm" id="💣" maxlength="2" placeholder="MM" required>
+            <input type="text" class="year yy" id="💣" maxlength="2" placeholder="YY" required><p id="❤"></p></label><br>
           </label>
-          <label for="cvc">CVC <br> <input type="text" name="cvc" id="cvc 💣" placeholder="e.g. 123" class="cvc year" required><br><p id="💕"></p></label>
+          <label for="cvc">CVC <br> <input type="text" name="cvc" id="cvc 💣" maxlength="3" placeholder="e.g. 123" class="cvc year" required><br><p id="💕"></p></label>
         </div>
         <button id="confirm" >CONFIRM</button> 
       </form>
